bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:2: error: ')' expected but integer literal found.
  return ((Math.abs(temp 1 - temp2)) > 100)
                         ^IcyHot:3: error: ')' expected but '}' found.
} 
^