bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {
  return ((Math.abs(temp 1 - temp2)) > 100)
}